<resources>
    <string name="app_name">GrupoEightUNAL</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="butoon_1">Butoon_1</string>
    <string name="boton_de_ejemplo">Boton de Ejemplo</string>
    <string name="ingrese_usuario_email">Ingrese Usuario ó Email</string>
    <string name="description_imagen_del_login">Imagen del login</string>
    <string name="ingrese_su_password">Ingrese su password</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="registrate_si_no_tienes_cuenta">Registrate si no tienes cuenta</string>
    <string name="ingrese_su_email">Ingrese su Email</string>
    <string name="password">Password</string>
    <string name="nombre_de_usuario">Nombre de Usuario</string>
    <string name="registrar">Registrar</string>
    <string name="login">Login</string>
    <string name="home_label">Home</string>
    <string name="productos_label">Productos</string>
    <string name="comentarios_label">Comentarios</string>
    <string name="perfil_label">Perfil</string>
    <string name="my_tienda">My tienda</string>
    <string name="home_title">Información General</string>
    <string name="productos_title">Mis Productos</string>
    <string name="comentarios_title">Mis Comentarios</string>
    <string name="perfil_title">Mi Perfil</string>
    <string name="product_details_title">Detalle del producto</string>
    <string name="adress">Calle 13a bis #20 - 132</string>
    <string name="description_tienda">Una tienda de barrio se define como un establecimiento atendido por una o más personas detrás de un mostrador en donde el consumidor no tiene al alcance los productos y más del 50% de las ventas son para consumir fuera del establecimiento.</string>

</resources>