<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/commentFragment"
        android:name="com.jdvr.grupoeightunal.CommentFragment"
        android:label="@string/comentarios_title"
        tools:layout="@layout/fragment_comment" />
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.jdvr.grupoeightunal.HomeFragment"
        android:label="@string/home_title"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/productFragment"
        android:name="com.jdvr.grupoeightunal.ProductFragment"
        android:label="@string/productos_title"
        tools:layout="@layout/fragment_product" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.jdvr.grupoeightunal.ProfileFragment"
        android:label="@string/perfil_title"
        tools:layout="@layout/fragment_profile" />
</navigation>