<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupFragment"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:id="@+id/signup_icon"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:contentDescription="@string/description_imagen_del_login"
        android:src="@drawable/ic_logo_emprender"
        tools:ignore="ImageContrastCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signup_email"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="@dimen/dimen_default"
        android:layout_marginTop="@dimen/dimen_default"
        android:layout_height="wrap_content"
        android:hint="@string/ingrese_su_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxCornerRadiusBottomEnd="@dimen/dimen_default"
        app:boxCornerRadiusBottomStart="@dimen/dimen_default"
        app:boxCornerRadiusTopEnd="@dimen/dimen_default"
        app:boxCornerRadiusTopStart="@dimen/dimen_default"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="TextContrastCheck"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signup_password"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="@dimen/dimen_default"
        android:layout_marginTop="@dimen/dimen_default"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxCornerRadiusBottomEnd="@dimen/dimen_default"
        app:boxCornerRadiusBottomStart="@dimen/dimen_default"
        app:boxCornerRadiusTopEnd="@dimen/dimen_default"
        app:boxCornerRadiusTopStart="@dimen/dimen_default"
        app:endIconMode="password_toggle"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="TextContrastCheck"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signup_User_name"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="@dimen/dimen_default"
        android:layout_marginTop="@dimen/dimen_default"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_de_usuario"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxCornerRadiusBottomEnd="@dimen/dimen_default"
        app:boxCornerRadiusBottomStart="@dimen/dimen_default"
        app:boxCornerRadiusTopEnd="@dimen/dimen_default"
        app:boxCornerRadiusTopStart="@dimen/dimen_default"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="TextContrastCheck"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_default"
        android:layout_marginTop="@dimen/dimen_default"
        android:text="@string/registrar"
        app:boxCornerRadiusBottomEnd="@dimen/dimen_default"
        app:boxCornerRadiusBottomStart="@dimen/dimen_default"
        app:boxCornerRadiusTopEnd="@dimen/dimen_default"
        app:boxCornerRadiusTopStart="@dimen/dimen_default"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signup_to_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_default"
        android:text="@string/login"
        app:boxCornerRadiusBottomEnd="@dimen/dimen_default"
        app:boxCornerRadiusBottomStart="@dimen/dimen_default"
        app:boxCornerRadiusTopEnd="@dimen/dimen_default"
        app:boxCornerRadiusTopStart="@dimen/dimen_default"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        />




</LinearLayout>