<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <ImageView
        android:id="@+id/login_icon"
        android:layout_width="@dimen/icon_size_big"
        android:layout_height="@dimen/icon_size_big"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/description_imagen_del_login"
        android:src="@drawable/ic_logo_emprender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        tools:ignore="ImageContrastCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_usuario_email"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_icon"
        android:layout_marginHorizontal="@dimen/dimen_default"
        app:layout_constraintBottom_toTopOf="@id/login_password"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginVertical="@dimen/dimen_default"
        android:layout_height="wrap_content"
        android:hint="@string/ingrese_usuario_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxCornerRadiusBottomEnd="@dimen/dimen_default"
        app:boxCornerRadiusBottomStart="@dimen/dimen_default"
        app:boxCornerRadiusTopEnd="@dimen/dimen_default"
        app:boxCornerRadiusTopStart="@dimen/dimen_default"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="TextContrastCheck"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_usuario_email"
        android:layout_marginHorizontal="@dimen/dimen_default"
        app:layout_constraintBottom_toTopOf="@id/login_button"
        android:layout_height="wrap_content"
        android:hint="@string/ingrese_su_password"
        app:endIconMode="password_toggle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxCornerRadiusBottomEnd="@dimen/dimen_default"
        app:boxCornerRadiusBottomStart="@dimen/dimen_default"
        app:boxCornerRadiusTopEnd="@dimen/dimen_default"
        app:boxCornerRadiusTopStart="@dimen/dimen_default"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="TextContrastCheck"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/login_to_signup_button"
        android:layout_marginHorizontal="@dimen/dimen_default"
        android:text="@string/iniciar_sesion"
        app:boxCornerRadiusBottomEnd="@dimen/dimen_default"
        app:boxCornerRadiusBottomStart="@dimen/dimen_default"
        app:boxCornerRadiusTopEnd="@dimen/dimen_default"
        app:boxCornerRadiusTopStart="@dimen/dimen_default"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_to_signup_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="@dimen/dimen_default"
        android:text="@string/registrate_si_no_tienes_cuenta"
        app:boxCornerRadiusBottomEnd="@dimen/dimen_default"
        app:boxCornerRadiusBottomStart="@dimen/dimen_default"
        app:boxCornerRadiusTopEnd="@dimen/dimen_default"
        app:boxCornerRadiusTopStart="@dimen/dimen_default"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        />

</androidx.constraintlayout.widget.ConstraintLayout>